Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/EcoSync_Daily_Log__c.object-meta.xml
<CustomObject>
    <label>EcoSync Daily Log</label>
    <nameField>
        <displayFormat>DAILYEC-{000000}</displayFormat>
        <label>EcoSync Daily Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EcoSync Daily Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>