Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/fields/Atmosphere_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Atmosphere_Temperature__c</fullName>
    <label>Atmosphere Temperature</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>