Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/fields/Rain_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Rain_Percentage__c</fullName>
    <label>Rain Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>