Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/fields/Soil_Electric_Conductivity__c.field-meta.xml
<CustomField>
    <fullName>Soil_Electric_Conductivity__c</fullName>
    <label>Soil Electric Conductivity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>