Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/fields/Soil_Moisture_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Soil_Moisture_Percentage__c</fullName>
    <label>Soil Moisture Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>