Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/fields/Soil_Ph__c.field-meta.xml
<CustomField>
    <fullName>Soil_Ph__c</fullName>
    <label>Soil Ph</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>