Ecosync Website/main/default/objects/EcoSync_Daily_Log__c/fields/Soil_Potassium__c.field-meta.xml
<CustomField>
    <fullName>Soil_Potassium__c</fullName>
    <label>Soil Potassium</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>